--- a/tesaja.html
+++ b/tesaja.html
@@ -6,5 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Coba Dulu Bro</title>
 	</head>
-	<body></body>
+	<body>
+		Coba klik dibawah ini bro..
+		<p id="example">I am a paragraph.</p>
+
+		<button id="klik">Klik disini bro ! (function biasa)</button>
+		<button id="klik2">Klik disini bro ! (arrow function)</button>
+
+		<script src="tesaja.js"></script>
+	</body>
 </html>
